--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
